<resources>
    <string name="app_name">皮なしもも肉</string>
    <string name="question">とりもも肉(皮付き)の重量を入力してください。</string>
    <string name="radio_question">調理方法</string>
    <string name="radio_button_1">そのまま焼く</string>
    <string name="radio_button_2">トマト煮</string>
    <string name="round_up">Round Up?</string>
    <string name="calculate_button">計算する</string>
    <string name="hint_1">皮つきもも肉(g)</string>
    <string name="amount">Amount: %sg</string>
    <string name="protein">Protein: %sg</string>
    <string name="calorie">calorie: %skcal</string>

</resources>